# esp32-rover-server

./: Cargo.toml  send_telemetry.sh
backend/: Cargo.toml
backend/src/: main.rs
backend/src/protocol/: command.rs  dashboard_command.rs  dashboard_telemetry.rs  mod.rs  telemetry.rs
backend/src/ws/: handler.rs  mod.rs
dasbhoard/: Cargo.toml
dashboard/: Cargo.toml  Dioxus.toml
dashboard/assets/: tailwind.css
dashboard/src/: main.rs  ws.rs
dashboard/src/components/: control_button.rs  drive_controls.rs  mod.rs  sensor_card.rs
src/: main.rs
src/protocol/: mod.rs
src/ws/: handler.rs
