[package]
name = "dasbhoard"
version = "0.1.0"
authors = ["samuelSavanovic <samuel.savanovic@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
dioxus-logger = "0.7.1"
tracing = "0.1.43"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
